--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   width: 80vw;
   border-radius: 20px;
   padding: 22px;
+  box-shadow: 8px 9px 10px rgba(103, 110, 120, 0.2);
 }
 
 img {
@@ -56,7 +57,7 @@ p {
     border-radius: 18px;
     padding: 16px;
   }
-  
+
   img {
     margin-bottom: 30px;
   }
